    . 2109 (was NOTICE);
    . 2110 (was NOTICE);
    . 2111 (was INFO);
    . 2112 (was INFO).
  - Added log message 2113: XINS call request completely failed.

* XINS/Java Server Framework:
  - Fixed bug #1036854: Reset logging subsystem when reloading.
  - If the "org.xins.server.config.reload" is zero the FileWatcher won't be 
    started.
  - Added _ReloadProperties meta function.

* XINS/Java Common Library:
  - Added new types Float32 and Float64.
  - Added new type Base64.
  - Added a new Base64 class that perform base 64 encoding and decoding.
  - Changed the level of all Logdoc messages in the 'service' group to DEBUG.
    Proper logging is the responsibility of the ServiceCaller subclass and
    corresponding classes.
  - Changed UnexpectedExceptionCallException constructor: The 'cause' argument
    is now mandatory.

* Generated CAPI classes:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.

* Generation of specification documentation:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.
  - Fixed bug #1064487: The function name is not written in the examples.

* Generation of server-side Java code:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.
  - Fixed bug #1063006: log.xml with alpha DTD fails if no server reachable.
  - The xins-client.jar file is now also included in the generated war file.

* Generation of types Java code:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.
  - Added new types float32 and float64.
  - Added new type base64.
  - If the type is not specified '_text' is used as default.

* Logdoc:
  - Added new types float32 and float64.

* Javadoc
  - Changed URL at the bottom of the pages to http://www.xins.org.

* Build and release process:
  - Adapted the release process to the new XINS version format.

* Libraries: